syntax = "proto3";
package Stad.Service;

import "StadConstants.proto";

service StadService {
  // Application
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Terminate (TerminateRequest) returns (TerminateReply) {}
  
  rpc LoadAssemblySource(LoadAssemblyRequest) returns (LoadAssemblyReply) {}
  rpc LoadDataSource(LoadDataRequest) returns (LoadDataReply) {}
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
//
message TerminateRequest { }
message TerminateReply {}
//
message LoadAssemblyRequest {
  SourceType Type = 1;
}
message LoadAssemblyReply {}
//
message LoadDataRequest {
    SourceType Type = 1;
    string Param = 2;
}
message LoadDataReply {
    ReplyResultType ResultType = 1;
}
//